<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">帮手</string>
    <string name="hello_world">Hello world!</string>
    <string name="go_to_open">立即进入</string>
    <string name="action_settings">设置</string>
    <string name="action_change_bg">更换背景</string>

    <string name="main_tab_name_home">主页</string>
    <string name="main_tab_name_weather">天气</string>
    <string name="main_tab_name_quick">侃侃</string>
    <string name="main_tab_name_explore">发现</string>
    <string name="main_tab_name_my">我</string>

    <string name="menu_item_home">主页</string>
    <string name="menu_item_picture">网络图片</string>
    <string name="menu_item_recommend">精彩推荐</string>
    <string name="menu_item_logistics">快递查询</string>

    <string name="menu_item_app_manager">手机管理</string>
    <string name="menu_item_feedback">用户反馈</string>
    <string name="menu_item_note">便签</string>
    <string name="menu_item_shared">分享</string>

    <string name="call_phone">拨打电话</string>
    <string name="send_message">发送信息</string>
    <string name="camera">相机</string>
    <string name="photos">3D相册</string>
    <string name="calculator">计算器</string>
    <string name="scan">扫一扫</string>
    <string name="flashlight">手电筒</string>
    <string name="bluetooth_chat">蓝牙聊天</string>

    <string name="uninstall">卸载</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_news">NewsActivity</string>
    <string name="no_data">无数据</string>
    <string name="no_network">无网络</string>
    <string name="server_error">服务器异常</string>
    <string name="refresh"><u>刷新</u></string>
    <string name="toast_please_check_network">请检查网络</string>
    <string name="search">查询</string>

    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">加载中，请稍后…\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中，请稍后…\u2026</string>
    <string name="load_fail">加载数据失败!</string>
    <string name="title_activity_app_manager">应用管理</string>
    <string name="title_activity_memory_manager">内存管理</string>
    <string name="title_activity_phone_info">设备信息</string>
    <string name="memory_clean">内存清理</string>
    <string name="file_path">文件目录</string>

    <string name="open">打开</string>
    <string name="close">关闭</string>

    <string name="share_app">分享应用</string>
    <string name="about">关于</string>
    <string name="feedback">意见反馈</string>
    <string name="skin_peeler">更换皮肤</string>
    <string name="title_activity_kuai_di_search">快递查询</string>
    <string name="title_activity_jone_app_manager">手机管理</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_helper_main">HelperMainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">基本设置</string>

    <string name="pref_title_theme_setting">更换皮肤</string>

    <string-array name="pref_theme_setting_list_titles">
        <item>light_blue</item>
        <item>amber</item>
        <item>red</item>
        <item>blue_grey</item>
        <item>brown</item>
        <item>cyan</item>
        <item>deep_orange</item>
        <item>deep_purple</item>
        <item>green</item>
        <item>grey</item>
        <item>indigo</item>
        <item>orange</item>
        <item>teal</item>
        <item>yellow</item>
        <item>lime</item>
        <item>blue</item>
        <item>light_green</item>
        <item>pink</item>
        <item>purple</item>
    </string-array>
    <string-array name="pref_theme_setting_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
    </string-array>

    <string name="title_activity_photo_view_fullscreen">PhotoViewFullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="bing_copyright">copyright: %1$s</string>
    <string name="clean">清理</string>
    <string name="night_model">夜间模式</string>

    <string name="qr_scan_tips">将二维码/条码放入框内，即可自动扫描</string>

    <string name="now_date">%1$d年%2$d月%3$d日 周%4$s\r\n 农历: %5$s</string>

    <string name="today_festival">今天是: <xliff:g id="xxx">%s</xliff:g></string>
    <string name="today_no_festival">今天没有节日</string>
    <string name="title_activity_pictures_tab">图片</string>

    <string name="picture_indicator">%1$d/%2$d</string>
    <string name="history_today">历史上的今天: %1$d年%2$s</string>

    <string name="title_activity_picture_view_pager_fullscreen">PictureViewPagerFullscreenActivity
    </string>
    <string name="title_activity_weather_select_city">选择城市</string>
</resources>
