<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_menu_item_home"
            android:icon="@mipmap/menu_item_home"
            android:title="@string/menu_item_home" />
        <item android:id="@+id/nav_menu_item_weather"
            android:icon="@mipmap/menu_item_weather"
            android:title="@string/menu_item_weather" />
        <item android:id="@+id/nav_menu_item_note"
            android:icon="@mipmap/menu_item_note"
            android:title="@string/menu_item_note" />
        <item android:id="@+id/nav_item_app_manager"
            android:icon="@mipmap/menu_item_app_manager"
            android:title="@string/menu_item_app_manager" />
        <item android:id="@+id/nav_menu_item_logistics"
            android:icon="@mipmap/menu_item_logistics"
            android:title="@string/menu_item_logistics" />
        <item android:id="@+id/nav_menu_item_theme"
            android:icon="@mipmap/menu_item_recommend"
            android:title="@string/menu_item_theme"/>
    </group>

    <item android:title="Other">
        <menu>
            <item android:id="@+id/nav_menu_item_share"
                android:icon="@android:drawable/ic_menu_share"
                android:title="@string/menu_item_shared" />
            <item android:id="@+id/nav_menu_item_feedback"
                android:icon="@android:drawable/ic_menu_edit"
                android:title="@string/menu_item_feedback" />
        </menu>
    </item>

</menu>